--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   image_picker: ^1.1.2
-
+  webview_flutter: ^4.8.0
+  http: ^0.13.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
