--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^5.3.1
   shared_preferences: ^2.3.2
   firebase_storage: ^12.3.4
+  firebase_messaging: ^15.1.3
   
 dev_dependencies:
   flutter_test:
