--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.3.2
   firebase_storage: ^12.3.4
   firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.4
   
 dev_dependencies:
   flutter_test:
