--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,15 @@ dependencies:
   firebase_storage: ^12.3.4
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^17.2.4
-  
+
+  video_player: ^2.9.2
+  get_storage: ^2.1.1
+  flutter_sound: ^9.17.0
+  path_provider: ^2.0.12
+  just_audio: ^0.9.30
+  audioplayers: ^6.1.0
+  speech_to_text: ^7.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
