--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,10 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         minSdkVersion 23
+        multiDexEnabled true
+    }
+    dependencies {
+        implementation 'androidx.multidex:multidex:2.0.1'
     }
 
     buildTypes {
