--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,13 @@ dependencies:
   get_storage: ^2.1.1
   flutter_sound: ^9.17.0
   path_provider: ^2.0.12
-  just_audio: ^0.9.30
   audioplayers: ^6.1.0
   speech_to_text: ^7.0.0
   permission_handler: ^11.3.1
+  geolocator: ^13.0.2
+  google_maps_flutter: ^2.10.0
+  url_launcher: ^6.3.1
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
