--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_local_notifications: ^17.2.4
   url_launcher: ^6.3.1
   geolocator: ^13.0.2
+  connectivity_plus: ^6.1.1
 
   video_player: ^2.9.2
   get_storage: ^2.1.1
