--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
