--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   permission_handler: ^11.3.1
   google_maps_flutter: ^2.10.0
   geocoding: ^3.0.0
+  logger: ^2.5.0
+  intl: ^0.19.0
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
