--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   logger: ^2.5.0
   intl: ^0.19.0
   flutter_animate: ^4.5.2
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
