add icon and fix some merge shenanigans and name too. PlEASE KILL ME

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
 
     <application
-        android:label="terra_brain"
+        android:label="Novelku"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
