--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.14.1
+
+
   get: ^4.6.6
   image_picker: ^1.1.2
-  webview_flutter: ^4.8.0
+  webview_flutter: ^4.0.1
   http: ^0.13.4
   cloud_firestore: ^5.4.4
   firebase_core: ^3.6.0
@@ -63,6 +66,7 @@ dependencies:
   intl: ^0.19.0
   flutter_animate: ^4.5.2
   flutter_staggered_animations: ^1.1.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -87,8 +91,12 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
     - assets/
+    - assets/images/
+    - assets/icons/
+
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -120,3 +128,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+    image_path: "assets/icons/novelku_logo.png"
+    android: true
+    ios: true
+    remove_alpha_ios : true
+    adaptive_icon_background: "#ffffff"
+    adaptive_icon_foreground: "assets/icons/novelku_logo.png"
