--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   intl: ^0.19.0
   flutter_animate: ^4.5.2
   flutter_staggered_animations: ^1.1.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +89,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
     - assets/
 
   # To add assets to your application, add an assets section, like this:
