--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   flutter_animate: ^4.5.2
   flutter_staggered_animations: ^1.1.1
   animated_text_kit: ^4.2.2
-  animated_text_kit: ^4.2.2
+  flutter_quill: ^10.8.5
 
 dev_dependencies:
   flutter_test:
